Fixed forecast appearing off screen

--- a/static/stylesheets/weather_style.css
+++ b/static/stylesheets/weather_style.css
@@ -94,7 +94,6 @@
 }
 
 #week_forecast{
-    justify-content: center;
     visibility: hidden;
     margin-top: -54vh
 }
